<resources>
    <string name="app_name">Honkide Manabu Sample Collection</string>
    <string name="title_activity_main">Android sample collection to Honkide Manabu</string>
    <string name="titleLesson16">Widget Sample</string>
    <string name="titleLesson17">Layout Sample</string>
    <string name="titleLesson18">Container Sample</string>
    <string name="titleLesson26">Note App</string>
    <string name="titleLesson27">Calculator App</string>
    <string name="titleLesson28">TODO App</string>
    <string name="titleLesson29">Wallpaper Changer App</string>
    <string name="titleLesson31">Toolbar Sample</string>
    <string name="titleLesson32">Color Sample</string>
    <string name="titleLesson33">RecyclerView Sample</string>
    <string name="titleLesson34">Various Animation sample</string>
    <string name="titleLesson35">Voice Memo App</string>
    <string name="titleLesson37">Color Sample App</string>
    <string name="titleLesson41">Game App</string>

    <string name="descLesson16">You can see the motion of various Widget to learn in the Lesson16.</string>
    <string name="descLesson17">You can see the motion of the various Layout to learn in the Lesson17.</string>
    <string name="descLesson18">You can see the motion of various Container to learn in the Lesson18.</string>
    <string name="descLesson26">You can confirm the motion of the note app to learn in Lesson26.</string>
    <string name="descLesson27">You can confirm the motion of the calculator app to learn in Lesson27.</string>
    <string name="descLesson28">You can see the motion of TODO app that learning in Lesson28.</string>
    <string name="descLesson29">You can see the motion of wallpaper changer app to learn in Lesson29.</string>
    <string name="descLesson31">You can confirm the motion of the Toolbar app to learn in Lesson31.</string>
    <string name="descLesson32">You can confirm the motion of the Color app to learn in Lesson32.</string>
    <string name="descLesson33">You can see the motion of RecyclerView app to learn in Lesson33.</string>
    <string name="descLesson34">You can see the motion of Animation app to learn in Lesson34.</string>
    <string name="descLesson35">You can confirm the motion of the Database app to learn in Lesson35.</string>
    <string name="descLesson37">You can see the motion of Internet app to learn in Lesson37.</string>
    <string name="descLesson41">You can confirm the motion of the game app to learn in Lesson41.</string>
    <string name="title_activity_promotion">Promotion</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="promotion_catch">サンプルアプリの作成や講義を通して、自分のペースで学べるAndroidアプリ開発入門本</string>
    <string name="promotion_contents">　本書は、Androidアプリを開発するために必要な環境の準備から始まり、Android Studioの基本的な使い方やAndroidアプリ開発の基本、Material Designやデータ処理、ゲーム開発、そしてGoogle Play Storeにアプリを公開する手順までを網羅。 「ほんき」でAndroidアプリの開発を学びたい方を、強くバックアップします。\n 「実習」で作成手順を学び、「講義」で作成手順の内容を理解してもらう構成になっています。\n 具体的には「CHAPTER 05」〜「CHAPTER 09」で、章ごとのテーマにもとづいたアプリを作っていただきます。\n また、サンプルとは別にデモアプリがあり、本書で解説・作成しているアプリの実際の動きが確認できます。そして、各章ごとに復習を兼ねた簡単な練習問題もあります。\n</string>
    <string name="promotion_index1">CHAPTER 01：Androidアプリ開発をはじめる前に</string>
    <string name="promotion_index2">CHAPTER 02：Androidアプリ開発の準備をしよう</string>
    <string name="promotion_index10">CHAPTER 10：アプリを公開しよう</string>
    <string name="promotion_index3">CHAPTER 03：Androidアプリ開発の基本を学ぼう</string>
    <string name="promotion_index4">CHAPTER 04：Androidアプリのウィジェットに慣れよう</string>
    <string name="promotion_index5">CHAPTER 05：Androidのシステムを学ぼう</string>
    <string name="promotion_index7">CHAPTER 07：Material Designを使ってみよう</string>
    <string name="promotion_index6">CHAPTER 06：Androidアプリを作ってみよう</string>
    <string name="promotion_index8">CHAPTER 08：データを使いこなそう</string>
    <string name="promotion_index9">CHAPTER 09：ゲームを作ってみよう</string>
    <string name="promotion_label1">目次</string>
    <string name="promotion_label2">内容</string>
    <string name="promotion_title">ほんきで学ぶAndroidアプリ開発入門</string>

</resources>
