<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        style="@style/promotion_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_label1"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shape_dotted"/>
    <TextView
        style="@style/promotion_index_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_index1"/>
    <TextView
        style="@style/promotion_index_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_index2"/>
    <TextView
        style="@style/promotion_index_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_index3"/>
    <TextView
        style="@style/promotion_index_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_index4"/>
    <TextView
        style="@style/promotion_index_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_index5"/>
    <TextView
        style="@style/promotion_index_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_index6"/>
    <TextView
        style="@style/promotion_index_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_index7"/>
    <TextView
        style="@style/promotion_index_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_index8"/>
    <TextView
        style="@style/promotion_index_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_index9"/>
    <TextView
        style="@style/promotion_index_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_index10"/>
    <TextView
        style="@style/promotion_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_label2"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shape_dotted"/>
    <TextView
        style="@style/promotion_contents_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promotion_contents"/>
</LinearLayout>